src/test/deca/syntax/invalid/lexer/sharp.deca
// Description:
//    # ne peut etre utilise qu'avec #include
//
// Resultats:
//    Ligne 11 : Erreur lexicale.
//
// Historique:
//    cree le 09/01/2023
//

#wrong